k8s/service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - name: service3
          image: service3:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: service3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
